# ESP32S3-USB-CAMERA

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3  tusb_config.h
.github/: copilot-instructions.md
main/: CMakeLists.txt  idf_component.yml  main.cpp  tusb_config.h  usb_descriptors.h
